[package]
name = "wae"
description = "Async executor that use Winit event loop"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/obhq/wae"
edition = "2021"

[dependencies]
raw-window-handle = "0.6.2"
rustc-hash = "2.1.0"
thiserror = "2.0.11"
winit = { version = "0.30.8", features = ["rwh_06"], default-features = false }
